# utils

./: .gitignore  LICENSE  README.md  stack.yaml  utils.cabal
app/: Hr.hs  Rename.hs  Trim.hs
src/: Open.hs  Version.hs
