name:                utils
version:             0.1.0.0
synopsis:            Some convenient utilities
description:         Please see README.md
homepage:            https://github.com/qwfy/utils
license:             BSD3
license-file:        LICENSE
author:              Incomplete
maintainer:          incomplete@aixon.co
copyright:           2016 Incomplete
category:            Utility
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable hr
  hs-source-dirs:      app
  main-is:             Hr.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , utils
                     , turtle
                     , text
  default-language:    Haskell2010

test-suite utils-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , utils
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/qwfy/utils
