name:                utils
version:             0.0.0.0
synopsis:            Some convenient utilities
description:         Please see README.md
homepage:            https://github.com/qwfy/utils
license:             BSD3
license-file:        LICENSE
author:              Incomplete
maintainer:          incomplete@aixon.co
copyright:           2017 Incomplete
category:            Utility
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs: src
  build-depends: base
               , optparse-applicative
  exposed-modules: Version
                 , Open
  default-language: Haskell2010

executable hr
  hs-source-dirs:      app
  main-is:             Hr.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , utils
                     , text
                     , time
                     , terminal-size
                     , optparse-applicative
                     , gitrev
  default-language:    Haskell2010

executable rename
  hs-source-dirs:      app
  main-is:             Rename.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , utils
                     , text
                     , optparse-applicative
                     , optparse-text
                     , directory
                     , filepath
                     , process
                     , temporary
                     , natural-sort
                     , containers
                     , transformers
                     , ansi-wl-pprint
                     , gitrev
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/qwfy/utils
